Implement the scroll details saving mechanism

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,5 +6,9 @@
     "action": {
         "default_popup": "index.html"
     },
-    "permissions": []
+    "permissions": [
+        "storage",
+        "activeTab",
+        "scripting"
+    ]
 }
