--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "es6": true,
         "browser": true,
-        "commonjs": true
+        "commonjs": true,
+        "webextensions": true
     },
     "parserOptions": {
         "ecmaVersion": 2020,
