Add assets folder for icons

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "parcel serve --no-cache -p 8080 src/manifest.json --config @parcel/config-webextension",
-    "build": "rm -rf dist && parcel build --no-cache --no-scope-hoist src/manifest.json --config @parcel/config-webextension"
+    "build": "rm -rf dist && parcel build --no-cache --no-scope-hoist src/manifest.json --config @parcel/config-webextension && cp -r src/assets dist/"
   },
   "keywords": [],
   "author": "",
