--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,5 +10,9 @@
         "storage",
         "activeTab",
         "scripting"
-    ]
+    ],
+    "icons": {
+        "48": "assets/icon48.png",
+        "128": "assets/icon128.png"
+    }
 }
