--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "ScrollMark",
-    "description": "A better way to save scroll positions.",
+    "name": "Mark Scroll Positions",
+    "description": "Mark your scroll locations for later.",
     "version": "1.0",
     "action": {
         "default_popup": "index.html"
@@ -14,5 +14,10 @@
     "icons": {
         "48": "assets/icon48.png",
         "128": "assets/icon128.png"
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "mark-scroll-positions@rugu.dev"
+        }
     }
 }
