Switch from Parcel to Vite and modernize the codebase

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
     "description": "Mark your scroll locations for later.",
     "version": "1.0",
     "action": {
-        "default_popup": "index.html"
+        "default_popup": "src/index.html"
     },
     "permissions": [
         "storage",
