--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     },
     "parserOptions": {
         "ecmaVersion": 2020,
+        "sourceType": "module",
         "ecmaFeatures": {
           "jsx": true
         }
