--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "scroller",
   "version": "1.0.0",
   "scripts": {
-    "start": "parcel serve --no-cache -p 8080 src/manifest.json src/manage.html --config @parcel/config-webextension",
-    "build": "rm -rf dist && parcel build --no-cache --no-scope-hoist src/manifest.json src/manage.html --config @parcel/config-webextension && cp -r src/assets dist/",
-    "release": "npm run build && (cd dist && zip ../dist.zip -r *)"
+    "dev": "vite ./src",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
@@ -14,14 +14,17 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@parcel/config-webextension": "^2.12.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-static-copy": "^3.1.1"
   },
   "devDependencies": {
+    "@types/chrome": "^0.1.1",
+    "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
-    "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "typescript": "^5.8.3",
+    "vite": "^7.0.5"
   }
 }
