Implement a release gh workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "scroller",
-  "version": "1.0.0",
+  "name": "mark-scroll-positions",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite ./src",
