--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,11 @@
     "permissions": [
         "storage",
         "activeTab",
-        "scripting"
+        "scripting",
+        "permissions"
+    ],
+    "optional_host_permissions": [
+        "<all_urls>"
     ],
     "icons": {
         "48": "assets/icon48.png",
