--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,9 +2,13 @@
     "manifest_version": 3,
     "name": "Mark Scroll Positions",
     "description": "Mark your scroll locations for later.",
-    "version": "1.1.3",
+    "version": "1.2.0",
     "action": {
         "default_popup": "src/index.html"
+    },
+    "options_ui": {
+        "page": "src/settings.html",
+        "open_in_tab": true
     },
     "permissions": [
         "storage",
