Fix manifest warnings across Chrome and Firefox

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "watch": "vite build --watch",
-    "start:firefox": "web-ext run --source-dir=./build --target=firefox-desktop",
+    "prepare:firefox-manifest": "node scripts/prepare-firefox-manifest.mjs",
+    "start:firefox": "npm run build && npm run prepare:firefox-manifest && web-ext run --source-dir=./build --target=firefox-desktop",
     "typecheck": "tsc --noEmit",
     "release:patch": "release-it patch",
     "release:minor": "release-it minor",
