Add Firefox background scripts fallback

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,9 @@
         "default_popup": "src/index.html"
     },
     "background": {
+        "scripts": [
+            "background.js"
+        ],
         "service_worker": "background.js"
     },
     "options_ui": {
